--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: gat_env_info
 description: GetArch infrastructure package, get app environment information
-version: 0.6.0
+version: 0.6.1
 repository: https://github.com/Hu-Wentao/get_env_info
 
 environment:
@@ -10,10 +10,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-  get_arch_core: ^0.6.0
+  get_arch_core: ^0.6.1
 #  get_arch_quick_start: ^0.6.1
 #  get_arch_quick_start:
 #    path: D:/flutter_arch/get_arch_quick_start
+  injectable: ^0.4.0+1
   json_serializable: ^3.3.0
   freezed_annotation: ^0.11.0
   package_info: ^0.4.1
@@ -25,7 +26,6 @@ dev_dependencies:
   build_runner: ^1.10.0
   freezed: ^0.11.2
   injectable_generator: ^0.4.1
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
